--- a/Pipeline.csproj
+++ b/Pipeline.csproj
@@ -1,11 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+	  <!--You can set this one-->
+	  <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+	  <!--Or replace OutputPath with OutDir-->
+	  <OutputPath>$(SolutionDir)library/PipelineBasic</OutputPath>
+	  <TargetFramework>net5.0</TargetFramework>
     <Title>PipelineBasic</Title>
     <Authors>Mirco Bianchini</Authors>
     <AssemblyName>PipelineBasic</AssemblyName>
-    <Version>$(Version)</Version>
     <PackageId>PipelineBasic</PackageId>
     <!-- if it is not defined use the AssemblyName property -->
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -17,9 +20,31 @@
     <RepositoryUrl>https://github.com/sonomirco/Pipeline</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
+  <Choose>
+    <When Condition="'$(Version)' == '' ">
+      <PropertyGroup>
+        <Version>0.0.0</Version>
+      </PropertyGroup>
+    </When>
+    <When Condition="'$(Version)' != '' ">
+      <PropertyGroup>
+        <Version>$(Version)</Version>
+      </PropertyGroup>
+    </When>
+  </Choose>
+
 
   <ItemGroup>
     <None Include="images\pipeline-basic-logo.png" Pack="true" PackagePath=""/>
   </ItemGroup>
+	
+	<Target Name="CopyGhFiles" AfterTargets="Build">
+		<ItemGroup>
+			<_FilesToCopy Include="images\pipeline-basic-logo.png" />
+		</ItemGroup>
+		<Message Text="image to copy: @(_FilesToCopy)" Importance="high" />
+		<Copy SourceFiles="@(_FilesToCopy)" DestinationFolder="$(SolutionDir)library/PipelineBasic" />
+		<Message Text="Files copied" Importance="high" />
+	</Target>
 
 </Project>
