--- a/.github/workflows/release-helper.yml
+++ b/.github/workflows/release-helper.yml
@@ -2,6 +2,9 @@ name: Release-Helper
 
 # Run this workflow every time a new commit pushed to your repository
 on:
+  push:
+   branches:
+    - develop
   workflow_dispatch:
     inputs:
       maxCommitPages:
