--- a/Pipeline.csproj
+++ b/Pipeline.csproj
@@ -1,13 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <!--You can set this one-->
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    <!--Or replace OutputPath with OutDir-->
-    <OutputPath>$(SolutionDir)library/PipelineBasic</OutputPath>
     <TargetFramework>net5.0</TargetFramework>
     <Title>PipelineBasic</Title>
     <Authors>Mirco Bianchini</Authors>
+    <Version>$(Version)</Version>
     <PackageId>PipelineBasic</PackageId>
     <!-- if it is not defined use the AssemblyName property -->
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -33,8 +31,7 @@
       </PropertyGroup>
     </When>
   </Choose>
-
-
+	 
   <ItemGroup>
     <None Include="images\pipeline-basic-logo.png" Pack="true" PackagePath=""/>
   </ItemGroup>
