--- a/.github/workflows/yak-package-pushed-to-azure-storage.yml
+++ b/.github/workflows/yak-package-pushed-to-azure-storage.yml
@@ -5,11 +5,19 @@ jobs:
   upload:
     runs-on: ubuntu-latest
     steps:
-      - name: Download Yak
+      - name: 📥 Download yak
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
-        run: curl -o ${{ github.workspace }}/yak http://files.mcneel.com/yak/tools/latest/yak.exe
+        run: curl -o ${{ github.workspace }}/yak.exe http://files.mcneel.com/yak/tools/latest/yak.exe
+        
+      - name: 📦 Build yak package
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
+        run: ${{ github.workspace }}\yak.exe build
+        # I prepopulated a manifest file and copied it next to the .gha
+        working-directory: ./grasshopperYak
 
       - name: 📜 Display
         run: |
-          echo $(basename ${{ github.workspace }}/yak/*)
+          echo $(basename ${{ github.workspace }}/*)
+          echo $(basename ./grasshopperYak/*)
