--- a/.github/workflows/yak-package-pushed-to-azure-storage.yml
+++ b/.github/workflows/yak-package-pushed-to-azure-storage.yml
@@ -2,7 +2,7 @@ name: Create a yak page and push to azure
 on: push
 
 env:
-  YAK_PATH: 'grasshoperYak/'
+  YAK_PATH: 'grasshoperYak'
 
 jobs:
   upload:
@@ -12,13 +12,6 @@ jobs:
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
         run: curl -o ${{ github.workspace }}/yak.exe http://files.mcneel.com/yak/tools/latest/yak.exe
-        
-      - name: 📦 Build yak package
-        env:
-          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
-        run: ${{ github.workspace }}\yak.exe build
-        # I prepopulated a manifest file and copied it next to the .gha
-        working-directory: ${{ env.YAK_PATH }}
 
       - name: 📜 Display
         run: |
