--- a/.github/workflows/yak-package-pushed-to-azure-storage.yml
+++ b/.github/workflows/yak-package-pushed-to-azure-storage.yml
@@ -15,5 +15,5 @@ jobs:
 
       - name: 📜 Display
         run: |
-          echo $(basename ${{ github.workspace }}/*)
+          #echo $(basename ${{ github.workspace }}/*)
           echo $(basename grasshoperYak/*)
