--- a/.github/workflows/yak-package-pushed-to-azure-storage.yml
+++ b/.github/workflows/yak-package-pushed-to-azure-storage.yml
@@ -1,9 +1,6 @@
 name: Create a yak page and push to azure
 on: push
 
-env:
-  YAK_PATH: 'grasshoperYak'
-
 jobs:
   upload:
     runs-on: ubuntu-latest
@@ -15,5 +12,4 @@ jobs:
 
       - name: 📜 Display
         run: |
-          #echo $(basename ${{ github.workspace }}/*)
-          echo $(basename ./grasshoperYak/*)
+          echo $(basename ./grasshoperYak)
