--- a/.github/workflows/yak-package-pushed-to-azure-storage.yml
+++ b/.github/workflows/yak-package-pushed-to-azure-storage.yml
@@ -12,4 +12,4 @@ jobs:
 
       - name: 📜 Display
         run: |
-          find /grasshoperYak -type f -printf "%f\n"
+          find ./grasshoperYak/* -type f -printf "%f\n"
