--- a/.github/workflows/yak-package-pushed-to-azure-storage.yml
+++ b/.github/workflows/yak-package-pushed-to-azure-storage.yml
@@ -12,4 +12,6 @@ jobs:
 
       - name: 📜 Display
         run: |
-          find ./images -type f -printf "%f\n"
+          for file in images/*; do
+            echo "$(basename "$file")"
+          done
