--- a/.github/workflows/yak-package-pushed-to-azure-storage.yml
+++ b/.github/workflows/yak-package-pushed-to-azure-storage.yml
@@ -12,6 +12,6 @@ jobs:
 
       - name: 📜 Display
         run: |
-          for file in grasshoperYak/*; do
+          for file in grasshoperYak//*; do
             echo $file
           done
