--- a/.github/workflows/yak-package-pushed-to-azure-storage.yml
+++ b/.github/workflows/yak-package-pushed-to-azure-storage.yml
@@ -12,7 +12,4 @@ jobs:
 
       - name: 📜 Display
         run: |
-          for file in ./grasshoperYak/*
-          do
-            echo $file
-          done;
+          #echo $(basename ./images/*)
