--- a/.github/workflows/yak-package-pushed-to-azure-storage.yml
+++ b/.github/workflows/yak-package-pushed-to-azure-storage.yml
@@ -12,8 +12,5 @@ jobs:
 
       - name: 📜 Display
         run: |
-          for filename in $(ls ./grasshoperYak/)
-          do
-            echo $filename
-          done;
+          for filename in $(ls ./grasshoperYak/); do echo $filename; done
           #echo $(basename ./grasshoperYak)
