--- a/.github/workflows/yak-package-pushed-to-azure-storage.yml
+++ b/.github/workflows/yak-package-pushed-to-azure-storage.yml
@@ -13,19 +13,12 @@ jobs:
         with: 
           fetch-depth: 0
           
-      - name: 📥 Download yak
-        env:
-          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
-        run: curl -o ${{ github.workspace }}/yak.exe http://files.mcneel.com/yak/tools/latest/yak.exe
-        
-      - name: 📦 Build yak package
-        env:
-          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
-        run: ${{ github.workspace }}/yak.exe build
-        # I prepopulated a manifest file and copied it next to the .gha
-        working-directory: ${{ env.YAK_PATH }}
 
       - name: 📜 Display
         run: |
-          foreach ($filename in $(ls ${{ env.YAK_PATH }})) { echo $filename }
-          #echo $(basename ./grasshoperYak)
+              if (Get-Module -ListAvailable -Name Az) {
+                  Write-Host "Module exists"
+              } 
+              else {
+                  Write-Host "Module does not exist"
+              }
