--- a/.github/workflows/yak-package-pushed-to-azure-storage.yml
+++ b/.github/workflows/yak-package-pushed-to-azure-storage.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: 📜 Display
         run: |
-              Install-Module -Name Az -Scope CurrentUser -Repository PSGallery -Force
+              Install-Module -Name Az -Scope CurrentUser -Repository PSGallery -AllowClobber
               if (Get-Module -ListAvailable -Name Az) {
                   Write-Host "Module exists"
               } 
