--- a/.github/workflows/yak-package-pushed-to-azure-storage.yml
+++ b/.github/workflows/yak-package-pushed-to-azure-storage.yml
@@ -23,5 +23,5 @@ jobs:
         uses: azure/powershell@v1
         with:
           inlineScript: |
-            .yakPush.ps1 -$conString "${{secrets.AZURE_STORAGE_CONNECTION_STRING}}" -fileStored "./grasshoperYak"
+            ./yakPush.ps1 -$conString "${{secrets.AZURE_STORAGE_CONNECTION_STRING}}" -fileStored "./grasshoperYak"
           azPSVersion: "latest"
