--- a/.github/workflows/yak-package-pushed-to-azure-storage.yml
+++ b/.github/workflows/yak-package-pushed-to-azure-storage.yml
@@ -23,6 +23,8 @@ jobs:
         uses: azure/powershell@v1
         with:
           inlineScript: |
-            $ctx = New-AzStorageContext -ConnectionString "DefaultEndpointsProtocol=https;AccountName=sandboxgh;AccountKey=Ge1eymfgWfs4wiU8o5mQ0UcmvDJS9xwQ065HPgm4cv+5q2m94CiJ8QrrHfSKql4CevYm6dP9zQyq+ASt2kNAPw==;EndpointSuffix=core.windows.net"
-            echo $ctx
+            $fileShareName="yakfolder"
+            $ctx=New-AzStorageContext -ConnectionString "${{secrets.AZURE_STORAGE_CONNECTION_STRING}}"
+            $fileShare=Get-AZStorageShare -Context $ctx -Name $fileShareName
+            echo $fileShare
           azPSVersion: "latest"
