--- a/.github/workflows/yak-package-pushed-to-azure-storage.yml
+++ b/.github/workflows/yak-package-pushed-to-azure-storage.yml
@@ -6,7 +6,7 @@ env:
 
 jobs:
   upload:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - name: 🛎 Checkout repo
         uses: actions/checkout@v2
