--- a/.github/workflows/yak-package-pushed-to-azure-storage.yml
+++ b/.github/workflows/yak-package-pushed-to-azure-storage.yml
@@ -28,7 +28,9 @@ jobs:
       - name: Login via Az module
         uses: azure/login@v1
         with:
-          creds: ${{secrets.AZURE_MM}}
+          client-id: "37b60b67-2164-42b6-aecb-7c76166c7870"
+          tenant-id: "a2bed0c4-5957-4f73-b0c2-a811407590fb"
+          subscription-id: "df00894b-e79b-4faa-85e2-ccf32a09a22c" 
           enable-AzPSSession: true
           
       - name: Deploy Hub
