--- a/.github/workflows/run-python-script.yaml
+++ b/.github/workflows/run-python-script.yaml
@@ -5,8 +5,9 @@ on:
   workflow_dispatch:
   
 jobs:
-  runs-on: ubuntu-latest
-  steps:
+  setup:
+    runs-on: ubuntu-latest
+    steps:
       - name: 🛎 Checkout repo
         uses: actions/checkout@v3
         with:
