--- a/.github/workflows/run-python-script.yaml
+++ b/.github/workflows/run-python-script.yaml
@@ -18,4 +18,5 @@ jobs:
           cache: "pip"
       - run: |
           python -m pip install --upgrade pip
+          pip install -r .github/requirements.txt
           python .github/pr_ckecks.py --token ${{ secrets.GITHUB_TOKEN }}
