--- a/.github/workflows/run-python-script.yaml
+++ b/.github/workflows/run-python-script.yaml
@@ -19,4 +19,4 @@ jobs:
       - run: |
           python -m pip install --upgrade pip
           pip install -r .github/requirements.txt
-          python .github/pr_ckecks.py --token ${{ secrets.GITHUB_TOKEN }}
+          python .github/pr_ckecks.py --token ${{ secrets.GITHUB_TOKEN }} --valid_labels "Major,Bug,Patch" 
