--- a/.github/workflows/run-python-script.yaml
+++ b/.github/workflows/run-python-script.yaml
@@ -1,7 +1,8 @@
 name: Run python script
 
 on:
-  push:
+  pull_request:
+    types: [opened, labeled, unlabeled, synchronize, edited]
   workflow_dispatch:
   
 jobs:
