--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -2,7 +2,7 @@ name: Tag release
 
 on:
   release:
-    types: [published]
+    types: [created, edited]
   workflow_dispatch:
     inputs:
       tag:
