--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -18,6 +18,9 @@ env:
 jobs:
   update_version:
     runs-on: ubuntu-latest
+    outputs:
+      tag: ${{ steps.setoutput.outputs.version }}
+      release: ${{ steps.setoutput.outputs.check }}
     steps:
       - name: 🛎 Checkout repo
         uses: actions/checkout@v3
@@ -25,13 +28,14 @@ jobs:
           fetch-depth: 1
           
       - name: Set env Tag
+        id: setoutput
         run: |
           if [[ ${{ github.event_name }} == 'release' ]]; then
-              echo "tag=${{ github.event.release.tag_name }}" >> $GITHUB_ENV
-              echo "release=success" >> $GITHUB_ENV
+              echo "tag=${{ github.event.release.tag_name }}" >> $GITHUB_OUTPUT
+              echo "check=success" >> $GITHUB_OUTPUT
           else
-              echo "tag=${{ inputs.tag }}" >> $GITHUB_ENV
-              echo "release=nosuccess" >> $GITHUB_ENV
+              echo "tag=${{ inputs.tag }}" >> $GITHUB_OUTPUT
+              echo "check=nosuccess" >> $GITHUB_OUTPUT
           fi
           
   read_value:
@@ -39,9 +43,9 @@ jobs:
      runs-on: ubuntu-latest
      steps:
       - name: release
-        if: ${{ env.release == 'success' }}
-        run: echo "You used a release and the tag is ${{ env.tag }}"
+        if: ${{ needs.update_version.outputs.release == 'success' }}
+        run: echo "You used a release and the tag is ${{ needs.update_version.outputs.tag }}"
         
       - name: manual
-        if: ${{ env.release == 'nosuccess' }}
-        run: echo "You used a manual approach and the tag is ${{ env.tag }}"
+        if: ${{ needs.update_version.outputs.release == 'nosuccess' }}
+        run: echo "You used a manual approach and the tag is ${{ needs.update_version.outputs.tag }}"
