--- a/.github/workflows/check-comments.yml
+++ b/.github/workflows/check-comments.yml
@@ -11,5 +11,14 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: 🐍 Setting Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+        cache: 'pip'
+    - run: |
+          python -m pip install --upgrade pip
+          pip install -r .github/requirements.txt
+
     - run: |
           echo ${{ github.event.comment.body }}
