--- a/.github/workflows/check-comments.yml
+++ b/.github/workflows/check-comments.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      with:
+        ref: ${{ github.event.issue.pull_request.head.sha }}
 
     - name: 🐍 Setting Python
       uses: actions/setup-python@v4
