--- a/.github/workflows/check-comments.yml
+++ b/.github/workflows/check-comments.yml
@@ -13,6 +13,9 @@ jobs:
       with:
         ref: ${{ github.event.issue.pull_request.head.sha }}
 
+    - run: |
+          echo ${{ github.event.comment.body }}
+
     - name: 🐍 Setting Python
       uses: actions/setup-python@v4
       with:
@@ -21,6 +24,8 @@ jobs:
     - run: |
           python -m pip install --upgrade pip
           pip install -r .github/requirements.txt
-
-    - run: |
-          echo ${{ github.event.comment.body }}
+          python .github/validate_comment.py --body ${{ github.event.comment.body }}
+          if [ $? -ne 0 ]; then
+            echo "Validation failed!"
+            exit 1
+          fi
