--- a/.github/workflows/trigger-comment.yml
+++ b/.github/workflows/trigger-comment.yml
@@ -14,6 +14,16 @@ jobs:
         with:
           ref: ${{ github.event.issue.pull_request.head.sha }}
 
+      - uses: actions/github-script@v6
+        with:
+          script: |
+            github.rest.issues.updateComment({
+              comment_id: context.comment.id,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: '${{ github.event.issue.body }} 👋 Thanks for reporting!'
+            })
+
       - name: Deploy
         run: |
           echo "Deploying..."
