--- a/.github/workflows/trigger-comment.yml
+++ b/.github/workflows/trigger-comment.yml
@@ -3,6 +3,9 @@ name: Trigger by the commit
 on:
   issue_comment:
     types: [created]
+    branches:
+    - main
+    - develop
 
 jobs:
   deploy:
