--- a/.github/workflows/check-for-changes.yml
+++ b/.github/workflows/check-for-changes.yml
@@ -4,10 +4,10 @@ on:
   issue_comment:
 
 jobs:
-  changes:
+  validate:
     runs-on: ubuntu-latest
     steps:
-    - run: echo ${{ github.event.issue.pull_request.head.sha }}
+      - run: echo ${{ github.event.issue.pull_request.head.sha }}
 
       - name: 🛎 Checkout repo
         uses: actions/checkout@v3
